--- a/src/pages/lectures/computational-geometry.mdx
+++ b/src/pages/lectures/computational-geometry.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'tree3'
+title: 'computational-geometry'
 pubDate: 2024-10-16
-description: 'tree3'
+description: 'geometry'
 author: 'PCC'
 image:
 url: 'https://docs.astro.build/assets/rose.webp'
@@ -10,7 +10,6 @@ tags: ["Basic", "CPP"]
 layout: '../../layouts/MyLayout.astro'
 ---
 import { Image } from 'astro:assets';
-import treeImage from '../../images/tree.png';
 
 # Computational Geometry(計算幾何)
 
@@ -164,6 +163,19 @@ bool onseg(Pt<T> s, Pt<T> t, Pt<T> u) {
 ### 例題
 - [線段相交](https://tioj.sprout.tw/problems/356/)
 
+## 多邊形內部判定
+判斷一個點是否在多邊形內部
+
+直接打出一條射線，如果跟多邊形的交點數量是奇數那就在內部，否則在外部
+
+複雜度 $O(N)$
+
+## 皮克定理（Pick's Theorem）
+$S = I+\frac{B}{2}-1$
+- $S$: 多邊形面積
+- $I$: 內部格子點數量
+- $B$: 邊界上格子點數量
+
 ## 極角排序
 把一堆向量 $\vec{u_1}, \vec{u_2} \cdots \vec{u_n}$ 照逆時針順序排好
 
@@ -214,9 +226,14 @@ bool onseg(Pt<T> s, Pt<T> t, Pt<T> u) {
 ## 小結
 基本上計算幾何的題目大多都是這些基本題目，外面套上一些枚舉或資料結構等等的變形。所以計算幾何題目的重點就是要把這些基本的實作記熟，要用的時候拿來當黑盒子用，之後再一步一步把黑盒子拆開來寫出來。
 
-
 ## 例題
 - [TIOJ 1974](https://tioj.ck.tp.edu.tw/problems/1974)
 - [TIOJ 2183](https://tioj.ck.tp.edu.tw/problems/2183)
 - [最小凸多邊形](https://tioj.sprout.tw/problems/357/)
 - [CSES Convex Hull](https://cses.fi/problemset/task/2195)
+
+## 應用題
+- [TIOJ 2396](https://tioj.ck.tp.edu.tw/problems/2396)
+- [ABC 373 G](https://atcoder.jp/contests/abc373/tasks/abc373_g)
+- [CF 196 C](https://codeforces.com/contest/196/problem/C)
+- [ABC 341 G](https://atcoder.jp/contests/abc341/tasks/abc341_g)
