--- a/src/pages/lectures/computational-geometry.mdx
+++ b/src/pages/lectures/computational-geometry.mdx
@@ -233,6 +233,8 @@ $S = I+\frac{B}{2}-1$
 - [CSES Convex Hull](https://cses.fi/problemset/task/2195)
 
 ## 應用題
+- [OJDL 7201](https://ojdl.ck.tp.edu.tw/problem/7201)
+- [OJDL 7203](https://ojdl.ck.tp.edu.tw/problem/7203)
 - [TIOJ 2396](https://tioj.ck.tp.edu.tw/problems/2396)
 - [ABC 373 G](https://atcoder.jp/contests/abc373/tasks/abc373_g)
 - [CF 196 C](https://codeforces.com/contest/196/problem/C)
